--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <h1 id="level-title">Tap Anywhere to Start 🎮</h1>
+  <h1 id="level-title">🎮Tap Anywhere to Start</h1>
   <div class="container">
     <div lass="row">
 
